# credit-station

./: .gitignore  .solhint.json  .yarnrc.yml  README.md  credit-station-0.0.1-develop.1-abi.json  credit-station-0.0.1-develop.2-abi.json  credit-station-0.0.1-develop.8-abi.json  cspell.json  eslint.config.mjs  hardhat.config.ts  package.json  slither.config.json
.github/workflows/: cla.yml  publish.yml  test.yml
contracts/: CreditStation.sol  CreditStationAccessManager.sol  Ledger.sol
contracts/interfaces/: ICreditStation.sol  ILedger.sol  IVersioned.sol  error.sol  types.sol
contracts/test/: Token.sol
credit-distributor/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
credit-distributor/src/: configs.py  main.py  state.py
migrations/: deploy.ts  deployMainnet.ts  deploySchain.ts
scripts/: generateAbi.ts  test_deploy.sh
scripts/upgrade-tools-stub/: README.md
test/: CreditStation.ts  Ledger.ts
test/tools/: fixtures.ts
